# LLM-Projects

./: CHANGES_SUMMARY.md  PORTFOLIO_ANALYSIS.md  README_UPDATED.md  Readme.md  main.py
Ai-Grammer-Tutor/: .env  .gitignore  README.md  evaluate_metrics.py  pyproject.toml
Ai-Grammer-Tutor/frontend/: index.html
Ai-Grammer-Tutor/src/: utils.py
Mysql-database-chatbot/: .gitignore  README.md  app.py  evaluate_metrics.py  evaluation_results.json  pyproject.toml  requirements.txt
Mysql-database-chatbot/Mysql-database-chatbot/Ai-Grammer-Tutor/: .env
Mysql-database-chatbot/Mysql-database-chatbot/Ai-Grammer-Tutor/src/: prompts.py
Mysql-database-chatbot/src/: mysql_prompt.py  utils.py
News-Research-Analysis/: .gitignore  README.md  app.py  benchmark_performance.py  evaluate_metrics.py  evaluation_results.json
News-Research-Analysis/src/: rag.py  utils.py
Restautant-Name-And-Menu-Gen/: .env  Readme.md
frontend/: index.css  index.js
